# bible-explore

./: README.md  pyproject.toml  requirements.txt
docs/: graph-example-medium.html  graph-example.html  search-results-test.html
notebooks/: Untitled.ipynb  bible-explore-one.ipynb
src/: config.py  db_builder.py  search.py  server.py
src/templates/: index.html
src/templates/includes/: cards_verses.html  footer.html  navigation.html  scripts.html  visjs_graph.html
src/templates/layouts/: base.html
tests/: test_server.py
